objects/Opportunity_Program__c.object
<CustomObject>
    <description>This object mirrors information from its related Opportunity record and has some additional editable fields.</description>
    <fields>
        <fullName>Account_Division__c</fullName>
        <description>The Account division of the Opportunity this device is tied to.</description>
        <formula>Opportunity__r.Account_Division__r.Name</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Account Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>The owner of the account of the Opportunity this device is tied to.</description>
        <formula>HYPERLINK(&apos;/&apos; &amp; Account__r.OwnerId,Account__r.Account_Owner__r.FirstName  &amp; &apos; &apos; &amp; Account__r.Account_Owner__r.LastName)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account of the Opportunity this device is tied up. This is automatically populated during the Opportunity Program generation.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Programs</relationshipLabel>
        <relationshipName>Opportunity_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awarded_Amount__c</fullName>
        <description>The Opportunity Awarded Amount field.</description>
        <formula>Opportunity__r.Awarded_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgetry_Quote_PID__c</fullName>
        <label>Budgetry Quote PID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>The Opportunity Close Date.</description>
        <formula>Opportunity__r.CloseDate</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Decision_Maker_Confirmed_DW_via__c</fullName>
        <description>The Opportunity Customer Decision Maker Confirmed field.</description>
        <formula>TEXT(Opportunity__r.Customer_Decision_Maker_Confirmed_DW_via__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Customer Decision Maker Confirmed DW via</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Decision_Maker__c</fullName>
        <description>The Opportunity Customer Decision Maker.</description>
        <formula>TEXT(Opportunity__r.Customer_Decision_Maker__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Customer Decision Maker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Design_Win_Approved__c</fullName>
        <description>The Opportunity Date Design Win Approved field.</description>
        <formula>Opportunity__r.Date_Design_Win_Approved__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Date Design Win Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Review__c</fullName>
        <description>The Opportunity Date Submitted for Review field.</description>
        <formula>Opportunity__r.Date_Submitted_for_Review__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Date Submitted for Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Win_AM_Comments__c</fullName>
        <description>The Opportunity Date Design Win Approved</description>
        <formula>Opportunity__r.Design_Win_AM_Comments__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Design Win$ AM Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Win_Marketing_Comments__c</fullName>
        <description>The Opportunity Design Win Marketing Comments field.</description>
        <formula>Opportunity__r.Design_Win_Marketing_Comments__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Design Win$ Marketing Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Win_Progress__c</fullName>
        <description>The Opportunity Design Win Progress.</description>
        <formula>Opportunity__r.Design_Win_Progress__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Design Win Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Design_Win_Revenue__c</fullName>
        <description>The Opportunity Design Win Revenue field.</description>
        <formula>Opportunity__r.Design_Win_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Design Win Revenue (LTR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Design_Win_Review_Status__c</fullName>
        <formula>TEXT( Opportunity__r.Design_Win_Review_Status__c )</formula>
        <label>Design Win Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Characteristic_Details__c</fullName>
        <description>Description of Device Characteristic</description>
        <inlineHelpText>Description of Device Characteristic</inlineHelpText>
        <label>Device Characteristic Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_entered_ASP_Align_with_Quote__c</fullName>
        <description>The Opportunity &apos;Does entered ASP Align with Quote&apos; field.</description>
        <formula>TEXT(Opportunity__r.Does_entered_ASP_Align_with_Quote__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Does entered ASP Align with Quote? (DW)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Product_Production_Date__c</fullName>
        <description>The Opportunity First Product Production Date field.</description>
        <formula>Opportunity__r.First_Product_Production_Date_FQ__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>First Product Production Date (FQ)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_Of_Operation__c</fullName>
        <label>Frequency Of Operation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GF_Opportunity_Size__c</fullName>
        <description>The Opportunity Size field.</description>
        <formula>Opportunity__r.GF_Opportunity_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>GF Opportunity Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GF_Target_Share__c</fullName>
        <description>The Opportuntiy Target Share field.</description>
        <formula>Opportunity__r.GF_Target_Share__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>GF Target Share % (DW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IP_Gaps_Links__c</fullName>
        <formula>IF(IP_Gaps__c,  HYPERLINK(&apos;/00O90000002xhXE?pv0=&apos; &amp;  Name  , &apos;YES&apos;), &apos;NO&apos;)</formula>
        <label>IP Gaps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Gaps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ticked if there are device with IP Gaps selected.</description>
        <label>IP Gaps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GF_Committed_to_Process__c</fullName>
        <formula>TEXT(Opportunity__r.Is_GF_Committed_to_Process__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Is GF Committed to Process ? (DW)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Private_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field copies the value of the standard &apos;IsPrivate&apos; field and should only be used for sharing private opportunities via Sharing Settings. 

This is not intended to be displayed in the UI or used in reports.</description>
        <label>Is Private Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>The Opportunity Lead Source.</description>
        <formula>TEXT(Opportunity__r.LeadSource)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>The Opportunity Market Segment.</description>
        <formula>TEXT(Opportunity__r.Market_Segment__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Recommendation__c</fullName>
        <description>The Opportunity Marketing Recommendation field.</description>
        <formula>TEXT(Opportunity__r.Marketing_Recommendation__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Marketing Recommendation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meet_Approval_Entry_Criteria__c</fullName>
        <description>The Opportunity Meet Approval Entry Criteria.</description>
        <formula>Opportunity__r.Meet_Approval_Entry_Criteria__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Meet Approval Entry Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metal_Stack__c</fullName>
        <label>Metal Stack</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Technology__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1L1x</fullName>
                </value>
                <value>
                    <fullName>1L1x_4L1p3x_3L2x_1T3x</fullName>
                </value>
                <value>
                    <fullName>2L1x</fullName>
                </value>
                <value>
                    <fullName>2L1x_1L2x_1T6x</fullName>
                </value>
                <value>
                    <fullName>2L1x_3L1p3x_2L2x_2T4x</fullName>
                </value>
                <value>
                    <fullName>3L1x_1L2x_1T6x</fullName>
                </value>
                <value>
                    <fullName>3L1x_1T4x</fullName>
                </value>
                <value>
                    <fullName>3L1x_2L1p3x_3U2x_1T4x_2T10x</fullName>
                </value>
                <value>
                    <fullName>3L1x_2L1p3x_3U2x_2T10x</fullName>
                </value>
                <value>
                    <fullName>3L1x_2L2x_1T4x</fullName>
                </value>
                <value>
                    <fullName>3L1x_2L2x_2T4x</fullName>
                </value>
                <value>
                    <fullName>3L1x_2L2x_2T6x</fullName>
                </value>
                <value>
                    <fullName>4L1x</fullName>
                </value>
                <value>
                    <fullName>4L1x_1L2x_1T12x</fullName>
                </value>
                <value>
                    <fullName>4L1x_1L2x_1T4x</fullName>
                </value>
                <value>
                    <fullName>4L1x_1L2x_1T4x_1T12x</fullName>
                </value>
                <value>
                    <fullName>4L1x_1L2x_1T4x_1T18x</fullName>
                </value>
                <value>
                    <fullName>4L1x_1L2x_2T4x</fullName>
                </value>
                <value>
                    <fullName>4L1x_1T12x</fullName>
                </value>
                <value>
                    <fullName>4L1x_1T2x</fullName>
                </value>
                <value>
                    <fullName>4L1x_1T2x_1T4x</fullName>
                </value>
                <value>
                    <fullName>4L1x_1T4x</fullName>
                </value>
                <value>
                    <fullName>4L1x_1U2x</fullName>
                </value>
                <value>
                    <fullName>4L1x_1U2x_1T4x</fullName>
                </value>
                <value>
                    <fullName>4L1x_2L2x_1T4x</fullName>
                </value>
                <value>
                    <fullName>4L1x_2L2x_2T4x</fullName>
                </value>
                <value>
                    <fullName>4L1x_2T2x</fullName>
                </value>
                <value>
                    <fullName>4L1x_2T4x</fullName>
                </value>
                <value>
                    <fullName>4L1x_2U2x_2T4x</fullName>
                </value>
                <value>
                    <fullName>4L1x_3L2x_1T4x</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Metal_Layers__c</fullName>
        <label>Number of Metal Layers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityNext_Step__c</fullName>
        <label>Opportunity Next Step</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityObstacles__c</fullName>
        <label>Opportunity Obstacles</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_End_Application__c</fullName>
        <formula>TEXT(Opportunity__r.End_Application_for_Opty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity End Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used to enforce that only one Opportunity Program will be created for an Opportunity. This is automatically populated during the Opportunity Program generation.</description>
        <label>Opportunity ID Key</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp; Opportunity__r.OwnerId,Opportunity__r.Opportunity_Owner__r.FirstName &amp; &apos; &apos; &amp; Opportunity__r.Opportunity_Owner__r.LastName)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sourcing_Type__c</fullName>
        <description>The Opportunity Sourcing Type field.</description>
        <formula>TEXT(Opportunity__r.Opportunity_Sourcing_Type__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Opportunity Sourcing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The related Opportunity the record mirrors. This is automatically populated during the Opportunity Program generation.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Programs</relationshipLabel>
        <relationshipName>Opportunity_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paste_Commitment_Text_from_Customer__c</fullName>
        <description>The Opportunity &apos;Paste Commitment Text from Customer&apos; field</description>
        <formula>Opportunity__r.Paste_Commitment_Text_from_Customer__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Paste Commitment Text from Customer (DW)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_GF_Fab_Production_Split__c</fullName>
        <description>The Opportunity Primary GF Fab Prod Split field.</description>
        <formula>Opportunity__r.Fab_Split__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Primary GF Fab Production Split</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_GF_Fab__c</fullName>
        <description>The Opportunity Primary GF Fab field.</description>
        <formula>TEXT(Opportunity__r.Fab_Assignment_1__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Primary GF Fab</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>The Opportunity Probability</description>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Probability (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Process_Family__c</fullName>
        <description>The Opportunity Process Family</description>
        <formula>TEXT(Opportunity__r.Process_Family__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Process Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Geometry_NM__c</fullName>
        <description>The opportunity geometry value in nanometer (nm).</description>
        <formula>IF( Process_Geometry__c != null , VALUE(LEFT(Process_Geometry__c, LEN( Process_Geometry__c )-2))*1000,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Geometry (NM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Geometry__c</fullName>
        <description>The Opportunity Process Geometry</description>
        <formula>TEXT(Opportunity__r.Process_Geometry__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Process Geometry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Platform__c</fullName>
        <description>The Opportunity Process Platform Category.</description>
        <formula>TEXT(Opportunity__r.Process_Platform__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Process Platform Category (DW)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Technology_Copy__c</fullName>
        <description>This holds a copy of the Process Technology value populated by workflow rules during insert/update of opportunity program. Used by Opportunity Program Sharing Rules.</description>
        <label>Process Technology Copy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Technology__c</fullName>
        <description>Computed value based on Process geometry.

Leading =&lt;32nm
Mainstream 40nm-90nm
Matured &gt;90nm</description>
        <formula>IF(  Process_Geometry_NM__c  &lt;=32, &quot;Leading Edge&quot;,
 IF(Process_Geometry_NM__c  &gt;=40  &amp;&amp; Process_Geometry_NM__c   &lt;=90 , &quot;Mainstream&quot;, 
  IF(Process_Geometry_NM__c  &gt;90, &quot;Matured&quot;, null   ) 
 
 ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Health__c</fullName>
        <label>Project Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Minor Challenges</fullName>
                </value>
                <value>
                    <fullName>Critical Obstacles</fullName>
                </value>
                <value>
                    <fullName>Opportunity Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <description>The Opportunity Quote field.</description>
        <formula>Opportunity__r.Quote__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Quote # (DW)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Product_Data_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that a product data sheet was uploaded by FAE as an attachment.</description>
        <label>Representative Product Data Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_GF_Fab__c</fullName>
        <description>The Opportunity Secondary GF Fab field.</description>
        <formula>TEXT(Opportunity__r.Fab_Assignment_2__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Secondary GF Fab</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetGroup__c</fullName>
        <description>Holds the Region value of the associated Account. Value populated by Workflow.</description>
        <label>Account Region</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <description>The Account&apos; account short name this device is tied to.</description>
        <formula>Account__r.Short_Name__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Opportunity_URL__c</fullName>
        <description>The Opportunity Siebel Opportunity URL</description>
        <formula>Opportunity__r.Siebel_Opportunity_URL__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Siebel Opportunity URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Quarterly_Revenue__c</fullName>
        <description>The Opportunity Sum of Quarterly Revenue field.</description>
        <formula>Opportunity__r.Sum_of_Quarterly_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Sum of Quarterly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tapeout_Type__c</fullName>
        <label>Tapeout Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Product</fullName>
                </value>
                <value>
                    <fullName>GlobalShuttle MPW</fullName>
                </value>
                <value>
                    <fullName>Customer MPW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Die_Size__c</fullName>
        <label>Target Die Size</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Process_Node__c</fullName>
        <description>The Opportunity Target Process Node.</description>
        <formula>TEXT(Opportunity__r.Target_Process_Node__c)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Target Process Node</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Process_Technology_Description__c</fullName>
        <description>The Opportunity Target Process Tech Description field.</description>
        <formula>Opportunity__r.Target_Process_Technology__r.Description__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Target Process Technology Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Process_Technology__c</fullName>
        <formula>Opportunity__r.Target_Process_Technology__r.Name</formula>
        <label>Target Process Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_TO_Date__c</fullName>
        <description>The Opportunity 1st Production TO Date.</description>
        <formula>Opportunity__r.X1st_Product_TO_Date__c</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Target TO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>The default value based from Opportunity Target Process Node field but editable after generation.</description>
        <inlineHelpText>Process Node of Opportunity Program. Initial value was copy from Opportunity Target Process Node</inlineHelpText>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10XM</fullName>
                </value>
                <value>
                    <fullName>14XM</fullName>
                </value>
                <value>
                    <fullName>20LPM</fullName>
                </value>
                <value>
                    <fullName>22SOI</fullName>
                </value>
                <value>
                    <fullName>22FDSOI</fullName>
                </value>
                <value>
                    <fullName>28A</fullName>
                </value>
                <value>
                    <fullName>28HPM</fullName>
                </value>
                <value>
                    <fullName>28HPP</fullName>
                </value>
                <value>
                    <fullName>28LPH</fullName>
                </value>
                <value>
                    <fullName>28LPH-N</fullName>
                </value>
                <value>
                    <fullName>28-LP-TI</fullName>
                </value>
                <value>
                    <fullName>28LPQ</fullName>
                </value>
                <value>
                    <fullName>28NVM</fullName>
                </value>
                <value>
                    <fullName>28LPS</fullName>
                </value>
                <value>
                    <fullName>28SHP</fullName>
                </value>
                <value>
                    <fullName>28SLP</fullName>
                </value>
                <value>
                    <fullName>28SLP-ST</fullName>
                </value>
                <value>
                    <fullName>28U</fullName>
                </value>
                <value>
                    <fullName>28SLP_RF</fullName>
                </value>
                <value>
                    <fullName>32SOI</fullName>
                </value>
                <value>
                    <fullName>40LP</fullName>
                </value>
                <value>
                    <fullName>40LP_RF</fullName>
                </value>
                <value>
                    <fullName>45LP</fullName>
                </value>
                <value>
                    <fullName>45SOI</fullName>
                </value>
                <value>
                    <fullName>55LPE</fullName>
                </value>
                <value>
                    <fullName>55LPE_RF</fullName>
                </value>
                <value>
                    <fullName>65G</fullName>
                </value>
                <value>
                    <fullName>65LP</fullName>
                </value>
                <value>
                    <fullName>65LPE</fullName>
                </value>
                <value>
                    <fullName>65LPE_RF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Head_for_Review__c</fullName>
        <description>The Opportunity Territory Head for Review field.</description>
        <formula>HYPERLINK(&apos;/&apos; + Opportunity__r.Territory_Head_for_Review__c, Opportunity__r.Territory_Head_for_Review__r.FirstName + &apos; &apos; + Opportunity__r.Territory_Head_for_Review__r.LastName)</formula>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Territory Head for Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Metal_Thickness__c</fullName>
        <label>Top Metal Thickness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>1.5KTM</fullName>
                </value>
                <value>
                    <fullName>5KTM</fullName>
                </value>
                <value>
                    <fullName>6KTM</fullName>
                </value>
                <value>
                    <fullName>8KTM</fullName>
                </value>
                <value>
                    <fullName>9KTM</fullName>
                </value>
                <value>
                    <fullName>10KTM</fullName>
                </value>
                <value>
                    <fullName>11KTM</fullName>
                </value>
                <value>
                    <fullName>12KTM</fullName>
                </value>
                <value>
                    <fullName>14KTM</fullName>
                </value>
                <value>
                    <fullName>15KTM</fullName>
                </value>
                <value>
                    <fullName>16.5KTM</fullName>
                </value>
                <value>
                    <fullName>19KTM</fullName>
                </value>
                <value>
                    <fullName>20KTM</fullName>
                </value>
                <value>
                    <fullName>25KTM</fullName>
                </value>
                <value>
                    <fullName>28KTM</fullName>
                </value>
                <value>
                    <fullName>30KTM</fullName>
                </value>
                <value>
                    <fullName>40KTM</fullName>
                </value>
                <value>
                    <fullName>50KTM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Design_Win_Revenue__c</fullName>
        <description>The Opportunity Total Design Win Revenue.</description>
        <formula>Opportunity__r.Total_Design_Win_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>TDWR – To be Removed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Revenue__c</fullName>
        <description>The Opportunity Total Lifetime Revenue field.</description>
        <formula>Opportunity__r.Total_Lifetime_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-Only Field : Only editable at the Opportunity level</inlineHelpText>
        <label>Total Lifetime Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>